# presentation_make

./: .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  consumer.py  docker-compose.yml  main.py  pyproject.toml  requirements_pr.txt
config/: logger.py  messages.py
make_presentation/: __init__.py  config.py  converters.py  errors.py  image.py  main.py  presentation.py  text.py
make_presentation/DTO/: __init__.py  image_dto.py  presentation_dto.py  slide_dto.py  text_dto.py
make_presentation/api_models/: __init__.py  errors.py  interfaces.py
make_presentation/api_models/image/: __init__.py  kandinsky_api.py
make_presentation/api_models/text/: __init__.py  gigachat_api.py  openai_api.py  yandex_api.py
make_presentation/factories/: __init__.py  errors.py
make_presentation/factories/image/: image_factory.py  image_module_enum.py
make_presentation/factories/text/: text_factory.py  text_module_enum.py
make_presentation/generator_models/: __init__.py  interfaces.py
make_presentation/generator_models/pptx/: __init__.py  image_corrector.py  pptx.py  slide.py
make_presentation/generator_models/text/: __init__.py  generation_from_text.py  one_step_generation.py  text_in_two_steps.py
make_presentation/presentation_pptx/: __init__.py  image_corrector.py  presentation.py  presentation_structure.py  slide.py
make_presentation/templates/: __init__.py  get_settings.py  template_config.py
make_presentation/templates/templates/1/: .~lock._12.pptx#  _10.pptx  _101.pptx  _103.pptx  _105.pptx  _107.pptx  _108.pptx  _109.pptx  _110.pptx  _12.pptx  _13.pptx  _14.pptx  _15.pptx  _16.pptx  _18.pptx  _22.pptx  _24.pptx  _25.pptx  _26.pptx  _27.pptx  _28.pptx  _30.pptx  _32.pptx  _33.pptx  _34.pptx  _36.pptx  _38.pptx  _39.pptx  _40.pptx  _41.pptx  _43.pptx  _44.pptx  _45.pptx  _46.pptx  _47.pptx  _48.pptx  _49.pptx  _50.pptx  _52.pptx  _53.pptx  (+33 more)
make_presentation/templates/templates/2/: 2StandartTemplate.pptx  _10.pptx  _100.pptx  _101.pptx  _102.pptx  _11.pptx  _12.pptx  _13.pptx  _14.pptx  _15.pptx  _16.pptx  _17.pptx  _18.pptx  _19.pptx  _20.pptx  _21.pptx  _22.pptx  _23.pptx  _24.pptx  _25.pptx  _26.pptx  _27.pptx  _28.pptx  _29.pptx  _30.pptx  (+74 more)
make_presentation/utils/: __init__.py  pictures_sizes.py
queue_manager/: SQL_responses.py  db_queries.py  event_message.py  queue_exceptions.py  schemas.py  telegram_services.py
(+549 files in other folders)
