[tool.poetry]
name = "make-presentation"
version = "0.1.0"
description = ""
authors = ["Ekaterina Itchenko <ekaterina.savickaya.1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gigachat = "0.1.13"
python-dotenv = "1.0.0"
gigachain-core = "0.1.9.1"
gigachain-community = "0.0.11.1"
gigachain = "0.1.0.1"
pillow = "10.2.0"
python-pptx = "0.6.23"
setuptools = "^70.0.0"
aspose-pdf = "^24.6.0"
aspose-slides = "24.6.0"
asposeslidescloud = "^24.6.0"
spire-presentation = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make-presentation"
version = "0.1.0"
requires-python = ">=3.10"
