[tool.poetry]
name = "presentation-make"
version = "0.1.1"
description = ""
authors = ["Ekaterina Itchenko <ekaterina.savickaya.1989@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiormq = "6.8.1"
asyncpg = "0.30.0"
gigachat = "0.1.13"
python-dotenv = "1.0.0"
gigachain-core = "0.1.9.1"
gigachain-community = "0.0.11.1"
gigachain = "0.1.0.1"
pillow = "10.2.0"
python-pptx = "0.6.23"
setuptools = "^70.0.0"
pymupdf = "^1.24.9"
yandexcloud = "^0.320.0"
python-docx = "1.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["make_presentation"]

[project]
name = "presentation-make"
version = "0.1.1"
requires-python = ">=3.10"
